--- a/ProAcc/packages.config
+++ b/ProAcc/packages.config
@@ -23,6 +23,7 @@
   <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="popper.js" version="1.16.1" targetFramework="net452" />
+  <package id="Spire.Presentation" version="5.7.2" targetFramework="net452" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net452" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net452" />
   <package id="System.Memory" version="4.5.3" targetFramework="net452" />
