--- a/ProAcc/Web.config
+++ b/ProAcc/Web.config
@@ -17,6 +17,7 @@
     <add key="Error_filePath" value="~/Asset/Log/" />
     <add key="Upload_filePath" value="~/Asset/UploadedFiles/" />
     <add key="Upload_filePath_Temp" value="~/Asset/UploadedFiles/Temp" />
+    <add key="Upload_pptPath" value="~/Asset/Uploadedppt/" />
     
     <!--Mail Settings-->
     <!--<add key="Mail_Client" value="smtp.gmail.com" />
@@ -107,11 +108,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Spire.License" publicKeyToken="b1144360237c8b3f" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.3.7.40" newVersion="1.3.7.40" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.8.40" newVersion="1.3.8.40" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Spire.Pdf" publicKeyToken="663f351905198cb3" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.11.0.2040" newVersion="5.11.0.2040" />
+        <bindingRedirect oldVersion="0.0.0.0-6.7.6.0" newVersion="6.7.6.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
