--- a/ProAcc/ProAcc.csproj
+++ b/ProAcc/ProAcc.csproj
@@ -610,6 +610,7 @@
     <Compile Include="BL\Mail.cs" />
     <Compile Include="BL\Model\AuditReport.cs" />
     <Compile Include="BL\Model\CreateViewModel.cs" />
+    <Compile Include="BL\Model\IssueTrackModel.cs" />
     <Compile Include="BL\Model\LogedUser.cs" />
     <Compile Include="BL\Model\MailModel.cs" />
     <Compile Include="BL\Model\PicturetoData.cs" />
