--- a/ProAcc/ProAcc.csproj
+++ b/ProAcc/ProAcc.csproj
@@ -121,7 +121,7 @@
       <HintPath>..\packages\Spire.Presentation.5.7.2\lib\net40\Spire.Presentation.dll</HintPath>
     </Reference>
     <Reference Include="Spire.XLS">
-      <HintPath>obj\Release\Package\PackageTmp\bin\Spire.XLS.dll</HintPath>
+      <HintPath>..\packages\Spire.XLS.10.4.9\lib\xamarinios\Spire.XLS.dll</HintPath>
     </Reference>
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.0\lib\netstandard1.1\System.Buffers.dll</HintPath>
@@ -737,6 +737,10 @@
     <Content Include="Views\ProjectMonitor\Monitor.cshtml" />
     <Content Include="Views\Resource\ResourceAllocation.cshtml" />
     <Content Include="Views\ProjectMonitor\InstanceSelection.cshtml" />
+    <Content Include="Views\ProjectCreation\PMTaskCreation.cshtml" />
+    <Content Include="Views\ProjectCreation\_PMTaskCreate.cshtml" />
+    <Content Include="Views\ProjectCreation\_PMTaskIndex.cshtml" />
+    <Content Include="Views\ProjectMonitor\PMTask.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
