--- a/ProAcc/Web.config
+++ b/ProAcc/Web.config
@@ -35,12 +35,20 @@
     <add key="Mail_Password" value="Asd123!@#" />-->
     <add key="Mail_Port" value="587" />
     <add key="Mail_SSL" value="true" />
-    <add key="Mail_EnableTest" value="false" />
-    <add key="MailRunStatus" value="false" />
+    <add key="Mail_EnableTest" value="true" />
+    <add key="MailRunStatus" value="true" />
     <!--<add key="Mail_TestToID" value="akhil@promantus.com" />-->
-    <!--<add key="Mail_TestToID" value="gokul@promantus.com" />-->
+    <add key="Mail_TestToID" value="manogekumar@promantus.com" />
 
-    
+    <!--CRYSTAL REPORT-->
+    <add key="SERVERNAME" value="123.176.34.15,4433\MSSQLSERVER" />
+    <add key="DATABASE" value="ProAccDevNew" />
+    <add key="USERID" value="sa" />
+    <add key="PASSWORD" value="promantus@123" />
+    <add key="INTEGRATEDSECURITY" value="false" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key ="rptLocation" value="~/Asset/images/CrystalReport.rpt"/>
+    <add key="OutputPath_pdf" value="~/Asset/UploadedFiles/Temp/QuestionnairePdf/"/>
 
   </appSettings>
   <system.web>
