--- a/ProAcc/Web.config
+++ b/ProAcc/Web.config
@@ -18,7 +18,7 @@
     <add key="Upload_filePath" value="~/Asset/UploadedFiles/" />
     <add key="Upload_filePath_Temp" value="~/Asset/UploadedFiles/Temp" />
     <add key="Upload_pptPath" value="~/Asset/Uploadedppt/" />
-    
+
     <!--Mail Settings-->
     <!--<add key="Mail_Client" value="smtp.gmail.com" />
     <add key="Mail_UserName" value="manojrmbytest@gmail.com" />
@@ -27,7 +27,7 @@
     <add key="Mail_Client" value="smtp.office365.com" />
     <add key="Mail_UserName" value="ProAccelerator@promantus.com" />
     <add key="Mail_Password" value="proacc@123" />
-    
+
     <add key="Mail_FolderPath" value="~/Asset/MailTemplate/" />
     <!--<add key="Mail_CheckInterval" value="3600000" />-->
     <add key="Mail_CheckInterval" value="10000" />
@@ -36,7 +36,7 @@
     <add key="Mail_Port" value="587" />
     <add key="Mail_SSL" value="true" />
     <add key="Mail_EnableTest" value="true" />
-    <add key="MailRunStatus" value="true" />
+    <add key="MailRunStatus" value="false" />
     <!--<add key="Mail_TestToID" value="akhil@promantus.com" />-->
     <add key="Mail_TestToID" value="manogekumar@promantus.com" />
 
@@ -72,6 +72,7 @@
   
   <connectionStrings>
     <!--ProAccDevNew-->
+    <add name="MysqlPath" connectionString="Data Source = 123.176.34.15;port=4043;Integrated Security=False; Initial Catalog = survey; User ID = TestLogin; Password = ASD123!@#;"/>
     <add name="DBconnection" connectionString="Data Source=123.176.34.15,4433\MSSQLSERVER;Initial Catalog=ProAccDevNew;User ID=sa;Password=promantus@123;MultipleActiveResultSets=True;Application Name=EntityFramework" />
     <add name="ProAccEntities" connectionString="metadata=res://*/ProAcc_DB_Entity.csdl|res://*/ProAcc_DB_Entity.ssdl|res://*/ProAcc_DB_Entity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=123.176.34.15,4433\MSSQLSERVER;Initial Catalog=ProAccDevNew;User ID=sa;Password=promantus@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ProAccEntities1" connectionString="metadata=res://*/Models.PROACC.csdl|res://*/Models.PROACC.ssdl|res://*/Models.PROACC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=123.176.34.15,4433\MSSQLSERVER;Initial Catalog=ProAccDevNew;User ID=sa;Password=promantus@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
