--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /ProAcc/Asset/css/Loader.css
 /.vscode/tasks.json
 /ProAcc/Views/ProjectMonitor/AssessmentMonitor - Copy.cshtml
+/ProAcc/Asset/images/images.zip
