--- a/ProAcc/Web.config
+++ b/ProAcc/Web.config
@@ -74,14 +74,14 @@
   <connectionStrings>
     <!--ProAccDevNew-->
     <add name="MysqlPath" connectionString="Data Source = 123.176.34.15;port=4043;Integrated Security=False; Initial Catalog = survey; User ID = TestLogin; Password = ASD123!@#;"/>
-    <!--<add name="DBconnection" connectionString="Data Source=123.176.34.15,4433\MSSQLSERVER;Initial Catalog=ProAccDevNew;User ID=sa;Password=promantus@123;MultipleActiveResultSets=True;Application Name=EntityFramework" />
+    <add name="DBconnection" connectionString="Data Source=123.176.34.15,4433\MSSQLSERVER;Initial Catalog=ProAccDevNew;User ID=sa;Password=promantus@123;MultipleActiveResultSets=True;Application Name=EntityFramework" />
     <add name="ProAccEntities" connectionString="metadata=res://*/ProAcc_DB_Entity.csdl|res://*/ProAcc_DB_Entity.ssdl|res://*/ProAcc_DB_Entity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=123.176.34.15,4433\MSSQLSERVER;Initial Catalog=ProAccDevNew;User ID=sa;Password=promantus@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ProAccEntities1" connectionString="metadata=res://*/Models.PROACC.csdl|res://*/Models.PROACC.ssdl|res://*/Models.PROACC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=123.176.34.15,4433\MSSQLSERVER;Initial Catalog=ProAccDevNew;User ID=sa;Password=promantus@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="ProAccEntities1" connectionString="metadata=res://*/Models.PROACC.csdl|res://*/Models.PROACC.ssdl|res://*/Models.PROACC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=123.176.34.15,4433\MSSQLSERVER;Initial Catalog=ProAccDevNew;User ID=sa;Password=promantus@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
     <!--ProAccQA-->
-    <add name="DBconnection" connectionString="Data Source=123.176.34.15,4433\MSSQLSERVER;Initial Catalog=ProAccQA;User ID=sa;Password=promantus@123;MultipleActiveResultSets=True;Application Name=EntityFramework" />
+    <!--<add name="DBconnection" connectionString="Data Source=123.176.34.15,4433\MSSQLSERVER;Initial Catalog=ProAccQA;User ID=sa;Password=promantus@123;MultipleActiveResultSets=True;Application Name=EntityFramework" />
     <add name="ProAccEntities" connectionString="metadata=res://*/ProAcc_DB_Entity.csdl|res://*/ProAcc_DB_Entity.ssdl|res://*/ProAcc_DB_Entity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=123.176.34.15,4433\MSSQLSERVER;Initial Catalog=ProAccQA;User ID=sa;Password=promantus@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ProAccEntities1" connectionString="metadata=res://*/Models.PROACC.csdl|res://*/Models.PROACC.ssdl|res://*/Models.PROACC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=123.176.34.15,4433\MSSQLSERVER;Initial Catalog=ProAccQA;User ID=sa;Password=promantus@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ProAccEntities1" connectionString="metadata=res://*/Models.PROACC.csdl|res://*/Models.PROACC.ssdl|res://*/Models.PROACC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=123.176.34.15,4433\MSSQLSERVER;Initial Catalog=ProAccQA;User ID=sa;Password=promantus@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
 
     <!--ProAccDemo-->    
