--- a/ProAcc/ProAcc.csproj
+++ b/ProAcc/ProAcc.csproj
@@ -218,7 +218,6 @@
     <Content Include="Asset\css\loading.min.css" />
     <Content Include="Asset\css\main.css" />
     <Content Include="Asset\css\Menu.css" />
-    <Content Include="Asset\css\main_Login.css" />
     <Content Include="Asset\css\style.css" />
     <Content Include="Asset\css\Temp.css" />
     <Content Include="Asset\images\Carve-Out.png" />
@@ -247,6 +246,7 @@
     <Content Include="Asset\MailTemplate\T2.HTML" />
     <Content Include="Asset\MailTemplate\T3.HTML" />
     <Content Include="Asset\MailTemplate\T4.HTML" />
+    <Content Include="Asset\MailTemplate\T5.HTML" />
     <Content Include="Asset\Notiflix\notiflix-2.3.1.min.css" />
     <Content Include="Asset\Notiflix\notiflix-2.3.1.min.js" />
     <Content Include="Asset\Notiflix\notiflix-aio-2.3.1.min.js" />
@@ -601,6 +601,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="BL\CheckSessionTimeOutAttribute.cs" />
+    <Compile Include="BL\Cipher.cs" />
     <Compile Include="BL\CreatePDF.cs" />
     <Compile Include="BL\CrystalReportPDF.cs" />
     <Compile Include="BL\FileUpload.cs" />
