--- a/ProAcc/Web.config
+++ b/ProAcc/Web.config
@@ -36,8 +36,8 @@
     <add key="Mail_Port" value="587" />
     <add key="Mail_SSL" value="true" />
     <add key="Mail_EnableTest" value="false" />
-    <add key="MailRunStatus" value="true" />
-    <add key="PDFRunStatus" value="true" />
+    <add key="MailRunStatus" value="false" />
+    <add key="PDFRunStatus" value="false" />
     <!--<add key="Mail_TestToID" value="akhil@promantus.com" />-->
     <add key="Mail_TestToID" value="manogekumar@promantus.com" />
 
