--- a/ProAcc/Web.config
+++ b/ProAcc/Web.config
@@ -55,7 +55,7 @@
     <add key="Mail_CCAddress" value="manogekumar@promantus.com;gokul@promantus.com;"/>
 
 
-    <add key="Enc" value="true"/>
+    <add key="Enc" value="false"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
