--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /.vscode/tasks.json
 /ProAcc/Views/ProjectMonitor/AssessmentMonitor - Copy.cshtml
 /ProAcc/Asset/images/images.zip
+/Views_Demo.zip
