--- a/ProAcc/ProAcc.csproj
+++ b/ProAcc/ProAcc.csproj
@@ -767,6 +767,7 @@
     <Content Include="Views\CustomerQuestionnaire\SendMailToCustomer.cshtml" />
     <Content Include="Views\ProjectMonitor\PMUPload.cshtml" />
     <Content Include="Views\Report\PMReport.cshtml" />
+    <Content Include="Views\IssueTrack\_IssueTrackIndex.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
