--- a/ProAcc/ProAcc.csproj
+++ b/ProAcc/ProAcc.csproj
@@ -680,7 +680,7 @@
     <Content Include="Views\ProjectInstanceConfigs\Edit.cshtml" />
     <Content Include="Views\ProjectInstanceConfigs\Index.cshtml" />
     <Content Include="Views\Home\Home.cshtml" />
-    <Content Include="Views\Assessment\ActivitieReport.cshtml" />
+    <Content Include="Views\Assessment\ActivitiesReport.cshtml" />
     <Content Include="Views\Assessment\FioriAppsReport.cshtml" />
     <Content Include="Views\Test\CommingSoon.cshtml" />
     <Content Include="Views\PreConvertion\PreConvertion_Upload.cshtml" />
