BugFix With Gokul

--- a/ProAcc/ProAcc.csproj
+++ b/ProAcc/ProAcc.csproj
@@ -763,6 +763,7 @@
     <Content Include="Views\Report\PMReport.cshtml" />
     <Content Include="Views\IssueTrack\_IssueTrackIndex.cshtml" />
     <Content Include="Views\ProjectMonitor\PM_UPload.cshtml" />
+    <Content Include="Views\Resource\ResourceAllocationAll.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
