--- a/ProAcc/packages.config
+++ b/ProAcc/packages.config
@@ -8,6 +8,7 @@
   <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net452" />
   <package id="FreeSpire.Doc" version="7.11.0" targetFramework="net452" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net452" />
+  <package id="iTextSharp" version="5.5.13.1" targetFramework="net452" />
   <package id="jQuery" version="1.7.2" targetFramework="net452" />
   <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net452" />
   <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net452" />
