PM Task changes

--- a/ProAcc/ProAcc.csproj
+++ b/ProAcc/ProAcc.csproj
@@ -627,6 +627,7 @@
     <Compile Include="BL\Model\LogedUser.cs" />
     <Compile Include="BL\Model\MailModel.cs" />
     <Compile Include="BL\Model\PicturetoData.cs" />
+    <Compile Include="BL\Model\PMTaskModel.cs" />
     <Compile Include="BL\Model\ProjectMonitorModel.cs" />
     <Compile Include="BL\Model\ResourceAllocationModel.cs" />
     <Compile Include="BL\Model\SAPFioriAppsModel.cs" />
