--- a/ProAcc/ProAcc.csproj
+++ b/ProAcc/ProAcc.csproj
@@ -486,11 +486,6 @@
     <Content Include="Views\Assessment\SimplificationReport.cshtml" />
     <Content Include="Views\Assessment\CustomReport.cshtml" />
     <Content Include="Views\Customers\Create.cshtml" />
-    <Content Include="Views\CustomerProjectConfigs\Create.cshtml" />
-    <Content Include="Views\CustomerProjectConfigs\Delete.cshtml" />
-    <Content Include="Views\CustomerProjectConfigs\Details.cshtml" />
-    <Content Include="Views\CustomerProjectConfigs\Edit.cshtml" />
-    <Content Include="Views\CustomerProjectConfigs\Index.cshtml" />
     <Content Include="Views\ProjectInstanceConfigs\Create.cshtml" />
     <Content Include="Views\ProjectInstanceConfigs\Delete.cshtml" />
     <Content Include="Views\ProjectInstanceConfigs\Details.cshtml" />
@@ -587,6 +582,7 @@
     <Content Include="Views\Home\UpdatePassword.cshtml" />
     <Content Include="Views\Login\Forgotpassword.cshtml" />
     <Content Include="Views\Login\ResetLink.cshtml" />
+    <Content Include="Views\Home\Display_Status.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
